# steago

./: .env  .eslintrc.json  .gitignore  .npmrc  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.sample  .gitignore  README.md  project.json  pyproject.toml  steago.py
apps/api/_migrations/: env.py
apps/api/modules/core/db/: primary.py
apps/api/modules/core/models/: enums.py  unified.py  user.py  workspace.py
apps/api/modules/core/utils/: compress.py  db.py  logo.py  rate_limiter.py  strings.py  uuid.py
apps/api/tests/: test_hello.py
apps/web/: .eslintrc.json  .gitignore  README.md  next.config.js  project.json  tailwind.config.js  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/components/layouts/: app.tsx
apps/web/src/pages/: _app.tsx  _document.tsx
apps/web/src/pages/api/: token.ts
apps/web/src/pages/api/auth/: [...nextauth].ts
apps/web/src/pages/auth/: signin.tsx
apps/web/src/styles/: globals.scss
