[tool.poetry]
name = "steago-api"
version = "0.1.0"
description = "Steago is the AI platform for work"
authors = ["Augustus D'Souza <augustus@clergo.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [
  { include = "modules", from = ".", to = "steago_api" },
]
package-mode = true

  [tool.poetry.dependencies]
  # python = ">=3.9,<3.11"
  python = "^3.12"
  flask = "^3.0.3"
  python-box = "^7.2.0"
  requests = "^2.32.3"
  gunicorn = "^22.0.0"
  cryptography = "^43.0.0"
  flask-sqlalchemy = "^3.1.1"
  flask-migrate = "^4.0.7"
  python-dotenv = "^1.0.1"
  humanize = "^4.10.0"
  flask-compress = "^1.15"
  pyyaml = "^6.0.1"
  flask-cors = "^4.0.1"
  flask-caching = "^2.3.0"
  psycopg2-binary = "^2.9.9"
  pytz = "^2024.1"
  flask-limiter = { version = "^3.8.0", extras = ["redis"] }
  openai = "^1.37.0"
  groq = "^0.9.0"
  alembic-postgresql-enum = "^1.3.0"
  markdown2 = "^2.5.0"
  asgiref = "^3.8.1"
  pusher = "^3.3.2"
  flask-jwt-extended = "^4.6.0"
  pyjwt = "2.8"
  beautifulsoup4 = "^4.12.3"

  [tool.poetry.group.dev.dependencies]
  devtools = "^0.12.2"
  black = "^24.4.2"
  coverage = "^7.6.0"
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"
  twine = "^5.1.1"
  ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = [ "api" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../coverage/api/html' --cov-report xml:'../coverage/api/coverage.xml' --html='../reports/api/unittests/html/index.html' --junitxml='../reports/api/unittests/junit.xml'"
